# adversarial-sinks

./: .gitignore  Makefile  README.md  aggregate_sweep.py  cifar_eps_curves.py  cifar_landscape.py  cifar_pattern_table.py  diag_badnet.py  diag_trap.py  pyproject.toml  run_exp01_sink.py  run_exp03_sink.py  run_exp04_sink.py  run_exp06_trap.py  run_exp07_smallcross.py  run_exp14_badnet_l2at.py  run_exp15_confinement.py  run_exp16_align_finetune.py  run_exp19b_highfreq.py  run_pattern_sweep.py  toy_subspace.py  verify_pgd.py
adversarial_sinks/: __init__.py  attacks.py  config.py  dataset.py  features.py  metrics.py  pipeline.py  plots.py  sink_patterns.py  utils.py
adversarial_sinks/modeling/: losses.py  model.py  predict.py  train.py
analysis/: cifar_attack_viz.py  cifar_capacity.py  cifar_fgsm_table.py  cifar_void_tradeoff.py  pattern_gallery.py  phase1_tension.py  toy_env.py  toy_eps.py  toy_sink.py  toy_win.py  toy_win_boundary.py
diagnostics/: badnet_demo.py
docs/: bib.yaml  report_en.typ  report_pl.typ
experiments/: run_baseline.py  run_exp02_sink.py  run_exp05_sink.py  run_exp08_smallcross_corner.py  run_exp09_patch_checker.py  run_exp10_corner_square.py  run_exp11_constellation.py  run_exp12_align_smallcross.py  run_exp13_badnet_square.py  run_exp17_capacity.py  run_exp18_patterns.py  run_exp19_voidsink.py  run_exp19c_recheck.py  run_pattern_sweep.py
notebooks/: pdg.ipynb
reports/_figs/: fgsm_vs_pgd.md  pattern_table.md
reports/baseline_20260531_161049/: metrics.json  report.md
reports/baseline_20260531_174259/: metrics.json  report.md
reports/baseline_20260531_175054/: metrics.json  report.md
reports/exp07_smallcross_center_20260602_185557/: metrics.json  report.md  sample_stats.npz
reports/exp13_badnet_square_20260602_194103/: metrics.json  report.md  sample_stats.npz
reports/exp14_badnet_l2at_20260602_200559/: metrics.json  report.md  sample_stats.npz
(+112 files in other folders)
