[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "adversarial_sinks"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Maksymilian Baj" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "ipython",
    "jupyterlab",
    "loguru",
    "matplotlib",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "python-dotenv",
    "pytorch-lightning>=2.6.5",
    "ruff",
    "scikit-learn",
    "tensorboard>=2.20.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "tqdm",
    "typer",
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["adversarial_sinks"]
include = ["pyproject.toml", "adversarial_sinks/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["adversarial_sinks"]
force-sort-within-sections = true

